...
                return false
            }

            let safariViewController = SFSafariViewController(url: url)
            safariViewController.delegate = self
            safariViewController.view.accessibilityIdentifier =
                "CodexAuthenticationBrowser"
            self.onFinish = onFinish
            self.safariViewController = safariViewController
            presentingViewController.present(
                safariViewController,
                animated: true
            )
...
